tenitive final version, edits post first pratice

--- a/research/talks/macquarie_seminar_2016/css/theme/blood.css
+++ b/research/talks/macquarie_seminar_2016/css/theme/blood.css
@@ -14,6 +14,7 @@
  * GLOBAL STYLES
  *********************************************/
 body {
+  --red: #fb3550;
   background: #222;
   background-color: #222; }
 
@@ -25,7 +26,7 @@ body {
 
 ::selection {
   color: #fff;
-  background: #a23;
+  background: #fb3550;
   text-shadow: none; }
 
 .reveal .slides > section,
@@ -54,7 +55,7 @@ body {
 
 .reveal h1 {
   font-size: 3.77em;
-  color: #a23; }
+  color: #fb3550; }
 
 .reveal h2 {
   font-size: 2.11em; }
@@ -208,7 +209,8 @@ body {
  * LINKS
  *********************************************/
 .reveal a {
-  color: #a23;
+/*  color: #a23;*/
+  color: #fb3550;
   text-decoration: none;
   -webkit-transition: color 0.15s ease;
   -moz-transition: color 0.15s ease;
@@ -243,7 +245,7 @@ body {
 
 .reveal a:hover img {
   background: rgba(255, 255, 255, 0.2);
-  border-color: #a23;
+  border-color: #fb3550;
   box-shadow: 0 0 20px rgba(0, 0, 0, 0.55); }
 
 /*********************************************
@@ -251,19 +253,19 @@ body {
  *********************************************/
 .reveal .controls .navigate-left,
 .reveal .controls .navigate-left.enabled {
-  border-right-color: #a23; }
+  border-right-color: #fb3550; }
 
 .reveal .controls .navigate-right,
 .reveal .controls .navigate-right.enabled {
-  border-left-color: #a23; }
+  border-left-color: #fb3550; }
 
 .reveal .controls .navigate-up,
 .reveal .controls .navigate-up.enabled {
-  border-bottom-color: #a23; }
+  border-bottom-color: #fb3550; }
 
 .reveal .controls .navigate-down,
 .reveal .controls .navigate-down.enabled {
-  border-top-color: #a23; }
+  border-top-color: #fb3550; }
 
 .reveal .controls .navigate-left.enabled:hover {
   border-right-color: #dd5566; }
@@ -284,7 +286,7 @@ body {
   background: rgba(0, 0, 0, 0.2); }
 
 .reveal .progress span {
-  background: #a23;
+  background: #fb3550;
   -webkit-transition: width 800ms cubic-bezier(0.26, 0.86, 0.44, 0.985);
   -moz-transition: width 800ms cubic-bezier(0.26, 0.86, 0.44, 0.985);
   transition: width 800ms cubic-bezier(0.26, 0.86, 0.44, 0.985); }
