--- a/research/talks/thesis_defense/css/theme/blood.css
+++ b/research/talks/thesis_defense/css/theme/blood.css
@@ -10,6 +10,8 @@
  *
  */
 @import url(https://fonts.googleapis.com/css?family=Ubuntu:300,700,300italic,700italic);
+@import 'https://fonts.googleapis.com/css?family=Arimo|Droid+Sans|Hind|Noto+Sans|Oxygen|Raleway';
+
 /*********************************************
  * GLOBAL STYLES
  *********************************************/
@@ -19,7 +21,7 @@ body {
   background-color: #222; }
 
 .reveal {
-  font-family: Ubuntu, "sans-serif";
+  font-family: Palatino Linotype, "sans-serif";
   font-size: 36px;
   font-weight: normal;
   color: #eee; }
@@ -45,7 +47,7 @@ body {
 .reveal h6 {
   margin: 0 0 20px 0;
   color: #eee;
-  font-family: Ubuntu, "sans-serif";
+  font-family: Gill Sans MT, "sans-serif";
   font-weight: normal;
   line-height: 1.2;
   letter-spacing: normal;
