--- a/research/talks/thesis_defense/css/theme/blood.css
+++ b/research/talks/thesis_defense/css/theme/blood.css
@@ -12,7 +12,10 @@
 @import url(https://fonts.googleapis.com/css?family=Ubuntu:300,700,300italic,700italic);
 @import 'https://fonts.googleapis.com/css?family=Lato';
 @import url("//hello.myfonts.net/count/28aa3d");
-
+@font-face{
+  font-family:"Palatino Linotype";
+  src:url("http://www.myfontfree.com/data/200/p/palatino-linotype/Palatino Linotype.ttf");
+}
 
 @font-face {
     font-family: 'GillSansMTStd-Medium';
