--- a/research/talks/thesis_defense/css/theme/blood.css
+++ b/research/talks/thesis_defense/css/theme/blood.css
@@ -9,23 +9,8 @@
  * For other themes, change $codeBackground accordingly.
  *
  */
-@import url(https://fonts.googleapis.com/css?family=Ubuntu:300,700,300italic,700italic);
 @import 'https://fonts.googleapis.com/css?family=Lato';
-@import url("//hello.myfonts.net/count/28aa3d");
-@font-face{
-  font-family:"Palatino Linotype";
-  src:url("http://www.myfontfree.com/data/200/p/palatino-linotype/Palatino Linotype.ttf");
-}
-
-@font-face {
-    font-family: 'GillSansMTStd-Medium';
-    src: url({{ 'font-gill-sans.eot' | asset_url }});
-    src: url({{ 'font-gill-sans.eot?#iefix' | asset_url }}) format('embedded-opentype'),
-         url({{ 'font-gill-sans.woff' | asset_url }}) format('woff'),
-         url({{ 'font-gill-sans.ttf' | asset_url }}) format('truetype');
-    font-weight: normal;
-    font-style: normal;
-}
+@import 'https://fonts.googleapis.com/css?family=Droid+Serif';
 
 /*********************************************
  * GLOBAL STYLES
@@ -36,7 +21,7 @@ body {
   background-color: #222; }
 
 .reveal {
-  font-family: Palatino Linotype, "sans-serif";
+  font-family: Palatino, Palatino Linotype, URW Palladio L, "Droid Serif", "serif";
   font-size: 36px;
   font-weight: normal;
   color: #eee; }
