--- a/research/talks/photonics_connections_2016/css/theme/blood.css
+++ b/research/talks/photonics_connections_2016/css/theme/blood.css
@@ -9,7 +9,8 @@
  * For other themes, change $codeBackground accordingly.
  *
  */
-@import url(https://fonts.googleapis.com/css?family=Ubuntu:300,700,300italic,700italic);
+@import 'https://fonts.googleapis.com/css?family=Lato';
+@import 'https://fonts.googleapis.com/css?family=Droid+Serif';
 /*********************************************
  * GLOBAL STYLES
  *********************************************/
@@ -19,7 +20,7 @@ body {
   background-color: #222; }
 
 .reveal {
-  font-family: Ubuntu, "sans-serif";
+  font-family: Palatino, Palatino Linotype, URW Palladio L, "Droid Serif", "serif";
   font-size: 36px;
   font-weight: normal;
   color: #eee; }
