--- a/research/talks/NDNC_2017/css/theme/source/equs.scss
+++ b/research/talks/NDNC_2017/css/theme/source/equs.scss
@@ -20,7 +20,7 @@
 @import url(https://fonts.googleapis.com/css?family=Ubuntu:300,700,300italic,700italic);
 
 // Colors used in the theme
-$blood: #a23;
+$teal: #4bc4ed;
 $coal: #222;
 $codeBackground: #23241f;
 
@@ -40,11 +40,11 @@ $headingTextShadow: 2px 2px 2px $coal;
 $heading1TextShadow: 0 1px 0 #ccc, 0 2px 0 #c9c9c9, 0 3px 0 #bbb, 0 4px 0 #b9b9b9, 0 5px 0 #aaa, 0 6px 1px rgba(0,0,0,.1), 0 0 5px rgba(0,0,0,.1), 0 1px 3px rgba(0,0,0,.3), 0 3px 5px rgba(0,0,0,.2), 0 5px 10px rgba(0,0,0,.25), 0 20px 20px rgba(0,0,0,.15);
 
 // Links
-$linkColor: $blood;
+$linkColor: $teal;
 $linkColorHover: lighten( $linkColor, 20% );
 
 // Text selection
-$selectionBackgroundColor: $blood;
+$selectionBackgroundColor: $teal;
 $selectionColor: #fff;
 
 
