--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -27,8 +27,8 @@
       {% endfor %}
 
       
-<!--       <span class="sidebar-nav-item">Currently v{{ site.version }}</span>
-    </nav> -->
+      <a class="sidebar-nav-item" href="{{ site.github.repo }}">GitHub project</a>
+    </nav>
 
     <p>&copy; {{ site.time | date: '%Y' }}. All rights reserved.</p>
   </div>
