--- a/_includes/head.html
+++ b/_includes/head.html
@@ -18,7 +18,7 @@
   <link rel="stylesheet" href="/public/css/poole.css">
   <link rel="stylesheet" href="/public/css/syntax.css">
   <link rel="stylesheet" href="/public/css/hyde.css">
-  <link href='https://fonts.googleapis.com/css?family=Playfair+Display:700,900|Roboto:400,700,400italic,300,300italic,700italic' rel='stylesheet' type='text/css'>
+  <link href='https://fonts.googleapis.com/css?family=Megrim|Roboto:400,700,400italic,300,300italic,700italic' rel='stylesheet' type='text/css'>
   <!-- Icons -->
   <link rel="apple-touch-icon-precomposed" sizes="144x144" href="/public/apple-touch-icon-144-precomposed.png">
                                  <link rel="shortcut icon" href="/public/favicon.ico">
