idk why css is not updating

--- a/public/css/hyde.css
+++ b/public/css/hyde.css
@@ -219,7 +219,7 @@ a.sidebar-nav-item:focus {
   color: #90a959;
 }
 
-/* Cyan */
+/* Teal */
 .theme-base-0c .sidebar {
   background-color: #008B8B;
 }
