mod link color and more slide progress

--- a/research/talks/ml4all_2019/css/theme/dark-aqua.css
+++ b/research/talks/ml4all_2019/css/theme/dark-aqua.css
@@ -207,14 +207,14 @@ body {
  * LINKS
  *********************************************/
 .reveal a {
-  color: #008B8B;
+  color: #BA0069;
   text-decoration: none;
   -webkit-transition: color .15s ease;
   -moz-transition: color .15s ease;
   transition: color .15s ease; }
 
 .reveal a:hover {
-  color: #00f1f1;
+  color: rgb(189, 99, 150);
   text-shadow: none;
   border: none; }
 
