--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -11,7 +11,7 @@
 
     <nav class="sidebar-nav">
         <a class="sidebar-nav-item" href="{{ site.url }}">Home</a>
-      {% comment %}
+      <!-- {% comment %}
         The code below dynamically generates a sidebar nav of pages with
         `layout: page` in the front-matter. See readme for usage.
       {% endcomment %}
@@ -23,10 +23,12 @@
             <a class="sidebar-nav-item{% if page.url == node.url %} active{% endif %}" href="{{ node.url }}">{{ node.title }}</a>
           {% endif %}
         {% endif %}
-      {% endfor %}
+      {% endfor %} -->
 
-      
-      <a class="sidebar-nav-item" href="{{ site.github.repo }}">GitHub project</a>
+      <a class="sidebar-nav-item" href="{{site.baseurl}}cv">About Me</a>
+      <a class="sidebar-nav-item" href="{{site.baseurl}}research\talks">Selected Talks & Podcasts</a>
+      <a class="sidebar-nav-item" href="{{site.baseurl}}archive">Blog</a>      
+      <a class="sidebar-nav-item" href="{{ site.github.repo }}">Website repo</a>
     </nav>
 
     <p>&copy; {{ site.time | date: '%Y' }}. All rights reserved.</p>
