--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -28,7 +28,7 @@
       <a class="sidebar-nav-item" href="{{site.baseurl}}cv">About Me</a>
       <a class="sidebar-nav-item" href="{{site.baseurl}}research\talks">Selected Talks & Podcasts</a>
       <a class="sidebar-nav-item" href="{{site.baseurl}}archive">Blog</a>      
-      <a class="sidebar-nav-item" href="{{ site.github.repo }}">Website repo</a>
+      <a class="sidebar-nav-item" href="{{ site.github.repo }}">Website Repo</a>
     </nav>
 
     <p>&copy; {{ site.time | date: '%Y' }}. All rights reserved.</p>
