adding socials to sidebar, making twitch channel embed

--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -29,6 +29,14 @@
       <a class="sidebar-nav-item" href="{{site.baseurl}}research\talks">Selected Talks & Podcasts</a>
       <a class="sidebar-nav-item" href="{{site.baseurl}}archive">Blog</a>      
       <a class="sidebar-nav-item" href="{{ site.github.repo }}">Website Repo</a>
+      <a href="https://twitch.tv/crazy4pi314"><i class='fa fa-twitch'></i></a>&nbsp;
+      <a href="https://discord.com/invite/RmReNjt"><i class='fab fa-discord'></i></a>&nbsp;
+      <a href="https://twitter.com/crazy4pi314"><i class='fa fa-twitter'></i></a>&nbsp;
+      <a href="https://www.instagram.com/crazy4pi314"><i class='fa fa-instagram'></i></a>&nbsp;
+      <a href="https://www.linkedin.com/in/sckaiser1"><i class='fa fa-linkedin'></i></a>&nbsp;
+      <a href="https://github.com/crazy4pi314"><i class='fa fa-github'></i></a>
+      <!-- <a href="https://keybase.io/skaiser"><i class='fab fa-keybase'></i></a>&nbsp;
+      <a href="https://www.researchgate.net/profile/Sarah_Kaiser"><i class='fab fa-researchgate'></i></a> -->
     </nav>
 
     <p>&copy; {{ site.time | date: '%Y' }}. All rights reserved.</p>
