--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en-us">
+  <script src="https://kit.fontawesome.com/22ffc91bdd.js" crossorigin="anonymous"></script>
 
   {% include head.html %}
 
@@ -12,4 +13,5 @@
     </div>
 
   </body>
+
 </html>
